--- a/include/toy/CMakeLists.txt
+++ b/include/toy/CMakeLists.txt
@@ -3,8 +3,8 @@ mlir_tablegen(Ops.h.inc -gen-op-decls)
 mlir_tablegen(Ops.cpp.inc -gen-op-defs)
 mlir_tablegen(Dialect.h.inc -gen-dialect-decls)
 mlir_tablegen(Dialect.cpp.inc -gen-dialect-defs)
-add_public_tablegen_target(ToyOpsIncGen)
+add_public_tablegen_target(OpsIncGen)
 
-add_mlir_dialect(ToyOps toy)
-add_mlir_doc(ToyDialect ToyDialect toy/ -gen-dialect-doc)
-add_mlir_doc(ToyOps ToyOps toy/ -gen-op-doc)
+# add_mlir_dialect(ToyOps toy)
+# add_mlir_doc(ToyDialect ToyDialect toy/ -gen-dialect-doc)
+# add_mlir_doc(ToyOps ToyOps toy/ -gen-op-doc)
