--- a/src/toy/CMakeLists.txt
+++ b/src/toy/CMakeLists.txt
@@ -1,8 +1,15 @@
+set(LLVM_TARGET_DEFINITIONS RewritePatterns.td)
+mlir_tablegen(RewritePatterns.cc.inc -gen-rewriters)
+add_public_tablegen_target(RewritePatternsGen)
+
 add_mlir_dialect_library(MLIRToy
   Dialect.cc
+  RewritePatterns.cc
+  ShapeInferencePass.cc
 
   DEPENDS
   OpsIncGen
+  RewritePatternsGen
 
   LINK_COMPONENTS
   Core)
